# Student-Copilot

./: .aws.code-workspace
school-copilot/: .gitignore  QUICKSTART.md  README.md  TESTING.md  package.json  simple_test.py  (+6 more)
school-copilot/backend/: main.py  pyproject.toml  requirements.txt  test_auth_simple.py  test_data_validation.py  test_models_simple.py
school-copilot/backend/api/: __init__.py  auth.py  classes.py  documents.py  isolation.py  logs.py  queries.py
school-copilot/backend/auth/: __init__.py  auth_service.py  dependencies.py  jwt_handler.py  middleware.py  permissions.py
school-copilot/backend/cli/: test_isolation.py  test_rag.py
school-copilot/backend/models/: __init__.py  database.py  models.py  schema_manager.py
school-copilot/backend/sample_data/: algebra_textbook.txt  geometry_basics.txt
school-copilot/backend/schemas/: __init__.py  auth.py  classes.py  documents.py  logs.py  queries.py  users.py
school-copilot/backend/schemas/sql/: postgresql_schema.sql  sqlite_schema.sql
school-copilot/backend/services/: __init__.py  class_isolation_service.py  document_processor.py  embedding_service.py  rag_service.py
school-copilot/backend/src/middleware/: security.py
school-copilot/backend/src/security/: vulnerability_scanner.py
school-copilot/backend/src/services/: content_filter.py
school-copilot/backend/tests/: test_api.py  test_auth.py  test_auth_system.py  test_data_models.py  test_isolation.py  test_models.py  test_rag.py  test_schema_manager.py
school-copilot/backend/utils/: __init__.py  validation.py  validation_fixed.py
(+91 files in other folders)
